# cp-gap-rust

./: Cargo.toml  README.md  STM32F429ZITX_FLASH.ld  build.rs  memory.x  sys.c
.cargo/: config.toml
src/: bindings.rs  gapcom_callback.rs  gapcom_sender.rs  interrupts.rs  logger.rs  main.rs  utils.rs
src/mpu60x0/: data.rs  error.rs  mod.rs  registers.rs
