[package]
name = "cp-gap-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
    embedded-hal = "0.2.0"
    cortex-m = "0.7"
    cortex-m-rt = "0.6"
    stm32f4xx-hal = { version = "0.10", features = ["rt", "stm32f429"] }
    rtt-target = { version="0.3.1", features = ["cortex-m"] }
    panic-halt = "0.2.0"
    cty = "0.2.2"
    tinyrlibc = {version = "0.5.0", features = ["alloc"]}
    embedded-alloc = "0.6.0"
    critical-section = "1.1"

[profile.dev]
    panic = "abort"

[profile.release]
    panic = "abort"

[dev-dependencies]
    critical-section = { version = "1.1", features = ["std"] }